--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@ionic-native/location-accuracy": "^5.17.1",
     "@ionic-native/native-geocoder": "^5.17.1",
     "@ionic-native/native-storage": "^5.20.0",
+    "@ionic-native/network": "^5.20.0",
     "@ionic-native/open-native-settings": "^5.19.1",
     "@ionic-native/sms": "^5.19.1",
     "@ionic-native/social-sharing": "^5.19.1",
@@ -75,6 +76,7 @@
     "cordova-plugin-googleplus": "^8.2.1",
     "cordova-plugin-nativegeocoder": "^3.2.2",
     "cordova-plugin-nativestorage": "^2.3.2",
+    "cordova-plugin-network-information": "^2.0.2",
     "cordova-plugin-request-location-accuracy": "^2.3.0",
     "cordova-plugin-sms-receive": "^1.0.2",
     "cordova-plugin-telerik-imagepicker": "^2.3.3",
@@ -195,7 +197,8 @@
         "FIREBASE_DYNAMIC_LINKS_VERSION": "19.0.+"
       },
       "call-number": {},
-      "cordova-plugin-sms-receive": {}
+      "cordova-plugin-sms-receive": {},
+      "cordova-plugin-network-information": {}
     },
     "platforms": [
       "android",
