--- a/functions/package.json
+++ b/functions/package.json
@@ -13,9 +13,8 @@
     "node": "8"
   },
   "dependencies": {
-    "firebase-admin": "^8.6.0",
-    "firebase-functions": "^3.3.0",
-    "twilio": "^3.39.3"
+    "firebase-admin": "^8.9.2",
+    "firebase-functions": "^3.3.0"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
