--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@angular/router": "~8.1.2",
     "@ionic-native/android-permissions": "^5.17.1",
     "@ionic-native/background-geolocation": "^5.17.1",
-    "@ionic-native/call-number": "^5.19.1",
     "@ionic-native/camera": "^5.19.1",
     "@ionic-native/contacts": "^5.19.1",
     "@ionic-native/core": "^5.0.0",
@@ -30,10 +29,10 @@
     "@ionic-native/facebook": "^5.20.0",
     "@ionic-native/file": "^5.19.1",
     "@ionic-native/file-transfer": "^5.19.1",
-    "@ionic-native/firebase": "^5.17.1",
     "@ionic-native/firebase-analytics": "^5.17.1",
     "@ionic-native/firebase-authentication": "^5.17.1",
     "@ionic-native/firebase-dynamic-links": "^5.20.0",
+    "@ionic-native/firebase-x": "^5.20.0",
     "@ionic-native/geolocation": "^5.17.1",
     "@ionic-native/google-plus": "^5.20.0",
     "@ionic-native/image-picker": "^5.19.1",
@@ -44,7 +43,6 @@
     "@ionic-native/network": "^5.20.0",
     "@ionic-native/onesignal": "^5.20.0",
     "@ionic-native/open-native-settings": "^5.19.1",
-    "@ionic-native/sms": "^5.19.1",
     "@ionic-native/social-sharing": "^5.19.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -53,9 +51,7 @@
     "@ionic/storage": "^2.2.0",
     "@mauron85/cordova-plugin-background-geolocation": "^3.1.0",
     "animate.css": "^3.7.2",
-    "call-number": "^1.0.1",
-    "cordova": "^9.0.0",
-    "cordova-android": "8.1.0",
+    "cordova-android": "^8.1.0",
     "cordova-browser": "^5.0.4",
     "cordova-open-native-settings": "^1.5.2",
     "cordova-plugin-android-permissions": "^1.0.2",
@@ -79,20 +75,16 @@
     "cordova-plugin-nativestorage": "^2.3.2",
     "cordova-plugin-network-information": "^2.0.2",
     "cordova-plugin-request-location-accuracy": "^2.3.0",
-    "cordova-plugin-sms-receive": "^1.0.2",
     "cordova-plugin-telerik-imagepicker": "^2.3.3",
     "cordova-plugin-uniquedeviceid": "^1.3.2",
     "cordova-plugin-x-socialsharing": "^5.6.3",
-    "cordova-sms-plugin": "^1.0.0",
     "cordova-support-android-plugin": "^1.0.1",
     "cordova-support-google-services": "^1.3.2",
     "core-js": "^2.5.4",
     "es6-promise-plugin": "^4.2.2",
     "firebase": "^7.5.2",
     "firebase-admin": "^8.9.0",
-    "mx.ferreyra.callnumber": "0.0.2",
     "node-sass": "^4.13.1",
-    "onesignal-cordova-plugin": "^2.8.3",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "uuid": "^3.4.0",
@@ -163,7 +155,6 @@
         "ACCOUNT_TYPE": "$PACKAGE_NAME.account",
         "CONTENT_AUTHORITY": "$PACKAGE_NAME"
       },
-      "cordova-plugin-firebasex": {},
       "cordova-plugin-androidx": {},
       "cordova-plugin-androidx-adapter": {},
       "cordova-plugin-uniquedeviceid": {},
@@ -179,8 +170,6 @@
         "ANDROID_SUPPORT_V4_VERSION": "24.1.1+"
       },
       "cordova-plugin-contacts": {},
-      "mx.ferreyra.callnumber": {},
-      "cordova-sms-plugin": {},
       "cordova-plugin-googleplus": {
         "WEB_APPLICATION_CLIENT_ID": "560115770414-g48i0bb7bjj2osg3v2ds5v10h69g72cv.apps.googleusercontent.com",
         "PLAY_SERVICES_VERSION": "15.0.1"
@@ -198,10 +187,8 @@
         "FIREBASE_ANALYTICS_VERSION": "17.2.+",
         "FIREBASE_DYNAMIC_LINKS_VERSION": "19.0.+"
       },
-      "call-number": {},
-      "cordova-plugin-sms-receive": {},
       "cordova-plugin-network-information": {},
-      "onesignal-cordova-plugin": {}
+      "cordova-plugin-firebasex": {}
     },
     "platforms": [
       "android",
