--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "cordova-plugin-telerik-imagepicker": "^2.3.3",
     "cordova-plugin-uniquedeviceid": "^1.3.2",
     "cordova-plugin-x-socialsharing": "^5.6.3",
+    "cordova-sqlite-storage": "^4.0.0",
     "cordova-support-android-plugin": "^1.0.1",
     "cordova-support-google-services": "^1.3.2",
     "core-js": "^2.5.4",
@@ -188,7 +189,8 @@
         "FIREBASE_DYNAMIC_LINKS_VERSION": "19.0.+"
       },
       "cordova-plugin-network-information": {},
-      "cordova-plugin-firebasex": {}
+      "cordova-plugin-firebasex": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "android",
