--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/contacts": "^5.19.1",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/crop": "^5.19.1",
+    "@ionic-native/email-composer": "^5.21.5",
     "@ionic-native/facebook": "^5.20.0",
     "@ionic-native/file": "^5.19.1",
     "@ionic-native/file-transfer": "^5.19.1",
@@ -62,6 +63,7 @@
     "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-crop": "^0.4.0",
     "cordova-plugin-dialogs": "^2.0.2",
+    "cordova-plugin-email-composer": "^0.9.2",
     "cordova-plugin-facebook4": "^6.2.0",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-file-transfer": "^1.7.1",
@@ -190,7 +192,10 @@
       },
       "cordova-plugin-network-information": {},
       "cordova-plugin-firebasex": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-email-composer": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      }
     },
     "platforms": [
       "android",
